# scan_litellm_compromise

./: CHANGELOG.md  README.md  pyproject.toml  release.py  run_scan.bat  run_scan.py
.github/workflows/: ci.yml
docs/: project_requirements.md
docs/stories/: US-01_default_scan.md  US-02_scan_specific_threat.md  US-03_list_threats.md  US-04_custom_threat_file.md  US-05_user_threat_library.md  US-06_detect_compromised_version.md  US-07_detect_ioc_artifacts.md  US-08_detect_c2_connections.md  US-09_detect_phantom_deps.md  US-10_detect_k8s_lateral_movement.md  US-11_scan_source_and_configs.md  (+6 more)
scan_litellm_compromise/: __init__.py  discovery.py  ecosystem_npm.py  formatting.py  ioc_scanner.py  platform_linux.py  platform_policy.py  platform_windows.py  scanner.py  search_roots.py  source_scanner.py
scan_supply_chain/: __init__.py  __main__.py  anti_worm_scanner.py  ast_scanner.py  cache_scanner.py  config.py  discovery.py  ecosystem_base.py  ecosystem_npm.py  ecosystem_pypi.py  formatting.py  git_repo_index.py  history_scanner.py  ioc_scanner.py  ioc_windows.py  models.py  network_scanner.py  persistence_scanner.py  platform_darwin.py  platform_linux.py  platform_policy.py  platform_windows.py  report.py  scan_context.py  scanner.py  scoring.py  search_roots.py  skip_report.py  source_scanner.py  threat_profile.py  version_checker.py
tests/: conftest.py  test_anti_worm_scanner.py  test_ast_scanner.py  test_cache_scanner.py  test_cli_args.py  test_compromised_version_logic.py  test_formatting.py  test_git_repo_index.py  test_history_scanner.py  test_ioc_artifact_detection.py  test_metadata_discovery.py  test_network_scanner.py  test_packaging.py  test_persistence_scanner.py  test_phantom_deps.py  test_platform_policy.py  test_regex_patterns.py  test_report_formatting.py  test_scoring.py  test_search_roots.py  test_skip_report.py  test_source_file_scanning.py  test_source_pattern_matching.py  test_threat_profile_parsing.py  test_version_extraction.py  test_windows_ioc.py
(+9 files in other folders)
