[project]
name = "scan-litellm-compromise"
version = "0.5.0"
description = "Supply chain compromise scanner — detects known PyPI and npm attacks via data-driven threat profiles"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"

[project.optional-dependencies]
test = ["pytest"]

[project.scripts]
scan-litellm = "scan_litellm_compromise.scanner:main"

[tool.setuptools.package-data]
scan_litellm_compromise = ["threats/*.toml"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.mypy]
check_untyped_defs = true
ignore_missing_imports = true
