[project]
name = "scan-supply-chain"
version = "0.8.2"
description = "Supply chain compromise scanner — detects known PyPI and npm attacks via data-driven threat profiles"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"

[project.optional-dependencies]
test = ["pytest"]
dev = ["pytest", "ruff", "mypy"]

[project.scripts]
scan-supply-chain = "scan_supply_chain.scanner:main"
# Backward compatibility alias
scan-litellm = "scan_supply_chain.scanner:main"

[tool.setuptools.package-data]
scan_supply_chain = ["threats/*.toml"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.mypy]
check_untyped_defs = true
ignore_missing_imports = true
